--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,6 @@
 <resources>
-    <string name="app_name">Pathfinder calc</string>
+    <string name="app_name">Dice attack calculator</string>
     <string name="SneakSwitchStrNone">None</string>
-
 
     <string-array name="SpinNumbers">
         <item>1</item>
@@ -17,6 +16,4 @@
         <item>11</item>
         <item>12</item>
     </string-array>
-
-
 </resources>
